--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "brand": "English for French Speakers",
+    "brand": "Maison de l'Anglais",
     "nav": {
       "home": "Home",
       "videos": "Videos",
