--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,5 +1,5 @@
 {
-    "brand": "Anglais pour Francophones",
+    "brand": "Maison de l'Anglais",
     "nav": {
       "home": "Accueil",
       "videos": "Vidéos",
